--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:latest
+FROM tiangolo/uwsgi-nginx-flask:python3.9-2025-07-07
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update -y
@@ -6,14 +6,17 @@ RUN apt-get install -y python3
 RUN apt-get install -y python3-pip python3-dev build-essential vim
 RUN apt-get install -y nginx
 
-COPY requirements.txt /usr/src/appname/requirements.txt
+COPY requirements.txt /usr/src/build/requirements.txt
 
 
-WORKDIR /usr/src/appname
+WORKDIR /usr/src/build
 # RUN pip3 install --upgrade pip  --break-system-packages
 RUN pip3 install -r requirements.txt  --break-system-packages
 
-COPY . /usr/src/appname
-EXPOSE 8000
+ENV FLASK_RUN_HOST=0.0.0.0
+ENV FLASK_RUN_PORT=5000
 
-CMD ["python3", "app.py"]
+COPY . /usr/src/backend
+WORKDIR /usr/src/backend
+EXPOSE 5000
+CMD ["flask", "--app", "app", "run"]
